Closed
Bug 1655780
Opened 5 years ago
Closed 5 years ago
Intermittent SUMMARY: ThreadSanitizer: data race /builds/worker/checkouts/gecko/gfx/layers/apz/src/AsyncPanZoomController.cpp:5142:12 in mozilla::layers::AsyncPanZoomController::SetState(mozilla::layers::AsyncPanZoomController::PanZoomState)
Categories
(Core :: Panning and Zooming, defect, P5)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: btara [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=311274277&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/deCFGKkXTh-BYTkSMzNZVg/runs/0/artifacts/public/logs/live_backing.log
...
[task 2020-07-28T14:40:52.444Z] 14:40:52 INFO - GECKO(3613) | #36 PrepareAndDispatch /builds/worker/checkouts/gecko/xpcom/reflect/xptcall/md/unix/xptcstubs_x86_64_linux.cpp:125:37 (libxul.so+0xb47864)
[task 2020-07-28T14:40:52.445Z] 14:40:52 INFO - GECKO(3613) | #37 SharedStub <null> (libxul.so+0xb46b12)
[task 2020-07-28T14:40:52.450Z] 14:40:52 INFO - GECKO(3613) | #38 nsXREDirProvider::DoStartup() /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:980:11 (libxul.so+0x656e5d8)
[task 2020-07-28T14:40:52.450Z] 14:40:52 INFO - GECKO(3613) | #39 XREMain::XRE_mainRun() /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:4558:16 (libxul.so+0x655ee42)
[task 2020-07-28T14:40:52.451Z] 14:40:52 INFO - GECKO(3613) | #40 XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:4968:8 (libxul.so+0x656007f)
[task 2020-07-28T14:40:52.452Z] 14:40:52 INFO - GECKO(3613) | #41 XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5022:21 (libxul.so+0x65603e4)
[task 2020-07-28T14:40:52.452Z] 14:40:52 INFO - GECKO(3613) | #42 mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/Bootstrap.cpp:45:12 (libxul.so+0x656b022)
[task 2020-07-28T14:40:52.452Z] 14:40:52 INFO - GECKO(3613) | #43 do_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:217:22 (firefox+0xca443)
[task 2020-07-28T14:40:52.453Z] 14:40:52 INFO - GECKO(3613) | #44 main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:331:16 (firefox+0xca443)
[task 2020-07-28T14:40:52.454Z] 14:40:52 INFO - GECKO(3613) | SUMMARY: ThreadSanitizer: data race /builds/worker/checkouts/gecko/gfx/layers/apz/src/AsyncPanZoomController.cpp:5142:12 in mozilla::layers::AsyncPanZoomController::SetState(mozilla::layers::AsyncPanZoomController::PanZoomState)
[task 2020-07-28T14:40:52.454Z] 14:40:52 INFO - GECKO(3613) | ==================
[task 2020-07-28T14:40:52.454Z] 14:40:52 INFO - GECKO(3613) | Exiting due to channel error.
[task 2020-07-28T14:40:52.456Z] 14:40:52 INFO - GECKO(3613) | Crash Annotation GraphicsCriticalError: |[C0][GFX1-]: Receive IPC close with reason=AbnormalShutdown (t=233.478) Exiting due to channel error.
[task 2020-07-28T14:40:52.456Z] 14:40:52 INFO - GECKO(3613) | Crash Annotation GraphicsCriticalError: |[C0][GFX1-]: Receive IPC close with reason=AbnormalShutdown (t=235.819) Exiting due to channel error.
[task 2020-07-28T14:40:52.456Z] 14:40:52 INFO - GECKO(3613) | Exiting due to channel error.
[task 2020-07-28T14:40:53.560Z] 14:40:53 INFO - GECKO(3613) | Crash Annotation GraphicsCriticalError: |[C0][GFX1-]: Receive IPC close with reason=AbnormalShutdown (t=246.141) Crash Annotation GraphicsCriticalError: |[C0][GFX1-]: Receive IPC close with reason=AbnormalShutdown (t=245.279)
[task 2020-07-28T14:40:53.561Z] 14:40:53 INFO - TEST-INFO | Main app process: killed by SIGIOT
[task 2020-07-28T14:40:53.562Z] 14:40:53 INFO - Buffered messages logged at 14:40:42
[task 2020-07-28T14:40:53.564Z] 14:40:53 INFO - TEST-PASS | gfx/layers/apz/test/mochitest/test_group_mouseevents.html | Starting subtest helper_click.html?dtc=false
...
Comment 1•5 years ago
|
||
[task 2020-07-28T14:40:52.392Z] 14:40:52 INFO - GECKO(3613) | Previous read of size 4 at 0x7b74002f0ef0 by main thread:
[task 2020-07-28T14:40:52.393Z] 14:40:52 INFO - GECKO(3613) | #0 mozilla::layers::AsyncPanZoomController::HandleDragEvent(mozilla::MouseInput const&, mozilla::layers::AsyncDragMetrics const&, mozilla::gfx::CoordTyped<mozilla::CSSPixel, float>) /builds/worker/checkouts/gecko/gfx/layers/apz/src/AsyncPanZoomController.cpp:1033:7 (libxul.so+0x201b03e)
[task 2020-07-28T14:40:52.393Z] 14:40:52 INFO - GECKO(3613) | #1 mozilla::layers::DragBlockState::DispatchEvent(mozilla::InputData const&) const /builds/worker/checkouts/gecko/gfx/layers/apz/src/InputBlockState.cpp:282:20 (libxul.so+0x206746c)
[task 2020-07-28T14:40:52.393Z] 14:40:52 INFO - GECKO(3613) | #2 mozilla::layers::InputQueue::ProcessQueue() /builds/worker/checkouts/gecko/gfx/layers/apz/src/InputQueue.cpp:833:19 (libxul.so+0x206dc88)
[task 2020-07-28T14:40:52.393Z] 14:40:52 INFO - GECKO(3613) | #3 mozilla::layers::InputQueue::ReceiveMouseInput(RefPtr<mozilla::layers::AsyncPanZoomController> const&, mozilla::layers::TargetConfirmationFlags, mozilla::MouseInput const&, unsigned long*) /builds/worker/checkouts/gecko/gfx/layers/apz/src/InputQueue.cpp:239:3 (libxul.so+0x206d04b)
I think this read needs to hold the APZC recursive mutex.
Regressed by: 1655237
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
Updated•5 years ago
|
Severity: normal → S3
Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/00a02a686724
Hold mutex while accessing mState in AsyncPanZoomController::HandleDragEvent. r=kats
![]() |
||
Comment 4•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Comment 5•5 years ago
|
||
Set release status flags based on info from the regressing bug 1655237
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•