Bug 1655780. Hold mutex while accessing mState in AsyncPanZoomController::HandleDragEvent. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D85214