gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -1029,12 +1029,15 @@ nsEventStatus AsyncPanZoomController::HandleDragEvent(
     return nsEventStatus_eConsumeNoDefault;
   }
 
-  if (aEvent.mType == MouseInput::MouseType::MOUSE_UP &&
-      mState == SCROLLBAR_DRAG) {
-    APZC_LOG("%p ending drag\n", this);
-    SetState(NOTHING);
-    ScrollSnap();
-    return nsEventStatus_eConsumeNoDefault;
+  {
+    RecursiveMutexAutoLock lock(mRecursiveMutex);
+    if (aEvent.mType == MouseInput::MouseType::MOUSE_UP &&
+        mState == SCROLLBAR_DRAG) {
+      APZC_LOG("%p ending drag\n", this);
+      SetState(NOTHING);
+      ScrollSnap();
+      return nsEventStatus_eConsumeNoDefault;
+    }
   }
 
   HitTestingTreeNodeAutoLock node;
